--- a/lean-marsicano.github.io-main/HTML lean/botones.html
+++ b/lean-marsicano.github.io-main/HTML lean/botones.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Amazon en quiebra?</title>
+    <style>
+        p {
+           font-family: Arial, sans-serif;
+        }
+       </style>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -13,7 +18,7 @@
         <a href="acordeon.html" class="navbar-brand">lista</a>
         <a href="forms.html" class="navbar-brand">inicio de sesion</a>
         <a href="modal.html" class="navbar-brand">modal</a>
-        <a href="indicadores.html" class="navbar-brand">Carrusel</a>
+        <a href="carrusel.html" class="navbar-brand">Carrusel</a>
     </div>
     <div class = "texto-centrado">
         <h1>¡Amazon esta vendiendo productos fallados!</h1>
