--- a/lean-marsicano.github.io-main/HTML lean/carrusel.html
+++ b/lean-marsicano.github.io-main/HTML lean/carrusel.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indicadores</title>
-</head>
+  </head>
 
 <body>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <div class="navbar navbar-dark bg-dark">
     <a href="acordeon.html" class="navbar-brand">Lista</a>
     <a href="forms.html" class="navbar-brand">Inicio de sesion</a>
     <a href="modal.html" class="navbar-brand">Modal</a>
     <a href="botones.html" class="navbar-brand">botones</a>  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <div id="carouselExampleIndicators" class="carousel slide mx-auto p-2" style="width: 500px;">
     <div id="carouselExampleIndicators" class="carousel slide">
     <div class="carousel-indicators">
@@ -46,7 +46,7 @@
     </button>
     <style>
       body{
-        background-color: darkgrey;
+        background-color: #22142b;
       }
     </style>
     </body>
