--- a/lean-marsicano.github.io-main/HTML lean/botones.html
+++ b/lean-marsicano.github.io-main/HTML lean/botones.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="navbar navbar-dark bg-dark">
-        <a href="acordeon.html" class="navbar-brand">lista</a>
+        <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
         <a href="forms.html" class="navbar-brand">inicio de sesion</a>
         <a href="modal.html" class="navbar-brand">modal</a>
         <a href="carrusel.html" class="navbar-brand">Carrusel</a>
