--- a/lean-marsicano.github.io-main/HTML lean/carrusel.html
+++ b/lean-marsicano.github.io-main/HTML lean/carrusel.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indicadores</title>
+    <div class="navbar navbar-dark bg-dark">
+      <a href="botones.html" class="navbar-brand">Principal</a>
+      <a href="forms.html" class="navbar-brand">inicio de sesion</a>
+      <a href="modal.html" class="navbar-brand">modal</a>
+      <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
+  </div>
   </head>
 
 <body>
-  <div class="navbar navbar-dark bg-dark">
-    <a href="acordeon.html" class="navbar-brand">Lista</a>
-    <a href="forms.html" class="navbar-brand">Inicio de sesion</a>
-    <a href="modal.html" class="navbar-brand">Modal</a>
-    <a href="botones.html" class="navbar-brand">botones</a>  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <div id="carouselExampleIndicators" class="carousel slide mx-auto p-2" style="width: 500px;">
     <div id="carouselExampleIndicators" class="carousel slide">
@@ -23,30 +24,34 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <h1>La noche estrellada diferentes estilos</h1>
         <img src="esplendor.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
+        <h1>El sol brilla en la ciudad de los sueños</h1>
         <img src="images.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
+        <h1>Con el cielo despejado</h1>
         <img src="miedo.jpg" class="d-block w-100" alt="...">
       </div>
        <div class="carousel-item">
+        <h1>El sentido de una vida</h1>
             <img src="la vida.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
+      <span class="visually-hidden">anterior</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
+      <span class="visually-hidden">siguiente</span>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </button>
     <style>
       body{
-        background-color: #22142b;
+        background-color: darkgray;
       }
     </style>
     </body>
