--- a/lean-marsicano.github.io-main/HTML lean/modal.html
+++ b/lean-marsicano.github.io-main/HTML lean/modal.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="modal.css">
-</head>
+    <div class="navbar navbar-dark bg-dark">
+      <a href="botones.html" class="navbar-brand">Principal</a>
+      <a href="forms.html" class="navbar-brand">inicio de sesion</a>
+      <a href="modal.html" class="navbar-brand">modal</a>
+      <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
+  </div>
+  </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <body>
   <style>
