--- a/lean-marsicano.github.io-main/HTML lean/botones.html
+++ b/lean-marsicano.github.io-main/HTML lean/botones.html
@@ -11,6 +11,20 @@
            font-family: Arial, sans-serif;
         }
        </style>
+       <head>
+        <style>
+            footer {
+                background-color: #f2f2f2;
+                padding: 20px;
+                text-align: center;
+            }
+    
+            footer p {
+                margin: 0;
+                color: #333;
+            }
+        </style>
+    </head>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -30,6 +44,9 @@
     <button id="boton"><a href="https://www.amazon.com"><img id ="imagen-boton" src="amazon-logo-jdg.jpg"></a></button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </div>
+<footer>
+    <p>&copy; 2024 Mi sitio web. Todos los derechos reservados.</p>
+</footer>
 </body>
 </html>
 
