--- a/lean-marsicano.github.io-main/HTML lean/modal.html
+++ b/lean-marsicano.github.io-main/HTML lean/modal.html
@@ -16,25 +16,29 @@
 <body>
   <style>
     body{
-      background-color: black;
+      background-color: white;
     }
   </style>
   <button id="modal1"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    ¿De que sirve esto?
+    Modos de contacto
 </button>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">:)</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Inofrmacion de contacto</h1>
       </div>
       <div class="modal-body">
-        No me dio el tiempo para personalizar esto
+        Instagram: Lean_Marsicano
+      </div>
+      <div class="modal-body">
+        Telefono: 3546528547
+      </div>
+      <div class="modal-body">
+        Correo: Lmoninamarsicano@escuelasproa.edu.ar
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Guardar</button>
       </div>
     </div>
   </div>
