--- a/lean-marsicano.github.io-main/HTML lean/botones.html
+++ b/lean-marsicano.github.io-main/HTML lean/botones.html
@@ -44,8 +44,27 @@
     <button id="boton"><a href="https://www.amazon.com"><img id ="imagen-boton" src="amazon-logo-jdg.jpg"></a></button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </div>
+<style>
+body {
+ display: flex;
+ flex-direction: column;
+ min-height: 100vh;
+}
+
+footer {
+ background-color: darkgray;
+ padding: 10px;
+ text-align: center;
+}
+</style>
+</head>
+<body>
+
+<div style="flex: 1;">
+</div>
+
 <footer>
-    <p>&copy; 2024 Mi sitio web. Todos los derechos reservados.</p>
+ <p>Todos los derechos reservados &copy; 2024</p>
 </footer>
 </body>
 </html>
