--- a/lean-marsicano.github.io-main/HTML lean/botones.html
+++ b/lean-marsicano.github.io-main/HTML lean/botones.html
@@ -29,8 +29,8 @@
 </head>
 <body>
     <div class="navbar navbar-dark bg-dark">
-        <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
-        <a href="forms.html" class="navbar-brand">inicio de sesion</a>
+        <a href="forms.html" class="navbar-brand">Inicio de Sesion</a>
+        <a href="acordeon.html" class="navbar-brand">Inormacion extra</a>
         <a href="modal.html" class="navbar-brand">modal</a>
         <a href="carrusel.html" class="navbar-brand">Carrusel</a>
     </div>
@@ -52,7 +52,7 @@ body {
 }
 
 footer {
- background-color: darkgray;
+ background-color: whitesmoke;
  padding: 10px;
  text-align: center;
 }
