--- a/lean-marsicano.github.io-main/HTML lean/modal.html
+++ b/lean-marsicano.github.io-main/HTML lean/modal.html
@@ -9,7 +9,7 @@
     <div class="navbar navbar-dark bg-dark">
       <a href="botones.html" class="navbar-brand">Principal</a>
       <a href="forms.html" class="navbar-brand">inicio de sesion</a>
-      <a href="modal.html" class="navbar-brand">modal</a>
+      <a href="carrusel.html" class="navbar-brand">Carrusel</a>
       <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
   </div>
   </head>
