--- a/lean-marsicano.github.io-main/HTML lean/carrusel.html
+++ b/lean-marsicano.github.io-main/HTML lean/carrusel.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indicadores</title>
     <div class="navbar navbar-dark bg-dark">
-      <a href="botones.html" class="navbar-brand">Principal</a>
+      <a href="index.html" class="navbar-brand">Principal</a>
       <a href="forms.html" class="navbar-brand">inicio de sesion</a>
       <a href="modal.html" class="navbar-brand">modal</a>
       <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
