--- a/lean-marsicano.github.io-main/HTML lean/modal.html
+++ b/lean-marsicano.github.io-main/HTML lean/modal.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="modal.css">
     <div class="navbar navbar-dark bg-dark">
-      <a href="botones.html" class="navbar-brand">Principal</a>
+      <a href="index.html" class="navbar-brand">Principal</a>
       <a href="forms.html" class="navbar-brand">inicio de sesion</a>
       <a href="carrusel.html" class="navbar-brand">Carrusel</a>
       <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
