--- a/lean-marsicano.github.io-main/HTML lean/acordeon.html
+++ b/lean-marsicano.github.io-main/HTML lean/acordeon.html
@@ -48,5 +48,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 <body>
-  <button type="button" class="botonaso"><a href="botones.html"> atras </a></button>
+  <button type="button" class="botonaso"><a href="index.html"> atras </a></button>
 </body>
