--- a/lean-marsicano.github.io-main/HTML lean/forms.html
+++ b/lean-marsicano.github.io-main/HTML lean/forms.html
@@ -20,7 +20,7 @@
                 <input type="password" id="contrasena" name="contrasena" required>
             </div>
             <div class="boton">
-                <button type="submit"> <a href="botones.html">Iniciar Sesión</a></button>
+                <button type="submit"> <a href="index.html">Iniciar Sesión</a></button>
             </div>
         </form>
     </div>
