--- a/lean-marsicano.github.io-main/HTML lean/index.html
+++ b/lean-marsicano.github.io-main/HTML lean/index.html
@@ -30,9 +30,9 @@
 <body>
     <div class="navbar navbar-dark bg-dark">
         <a href="forms.html" class="navbar-brand">Inicio de Sesion</a>
-        <a href="acordeon.html" class="navbar-brand">Inormacion extra</a>
-        <a href="modal.html" class="navbar-brand">modal</a>
-        <a href="carrusel.html" class="navbar-brand">Carrusel</a>
+        <a href="modal.html" class="navbar-brand">Contacto</a>
+        <a href="carrusel.html" class="navbar-brand">Arte aparte</a>
+        <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
     </div>
     <div class = "texto-centrado">
         <h1>¡Amazon esta vendiendo productos fallados!</h1>
