--- a/lean-marsicano.github.io-main/HTML lean/modal.html
+++ b/lean-marsicano.github.io-main/HTML lean/modal.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="modal.css">
     <div class="navbar navbar-dark bg-dark">
       <a href="index.html" class="navbar-brand">Principal</a>
-      <a href="forms.html" class="navbar-brand">inicio de sesion</a>
-      <a href="carrusel.html" class="navbar-brand">Carrusel</a>
+      <a href="forms.html" class="navbar-brand">Inicio de sesion</a>
+      <a href="carrusel.html" class="navbar-brand">Arte aparte</a>
       <a href="acordeon.html" class="navbar-brand">Informacion extra</a>
   </div>
   </head>
@@ -47,3 +47,4 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
+<style>
